# inv_aki

./: .gitignore  README.md  pyproject.toml  tox.ini
inv_aki/: app.py  chatgpt.py  text_box.py
